# goulding

./: BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
cmd/goulding-cli/: BUILD.bazel  main.go
cmd/goulding-server/: BUILD.bazel  main.go
examples/config/: canaries.proto.txt
examples/request/: request.proto.txt
pkg/config/: BUILD.bazel  config.go
pkg/judges/: BUILD.bazel  judge.go  primitive.go
pkg/server/: BUILD.bazel  server.go
pkg/sources/: BUILD.bazel  http.go  prometheus.go  sources.go
proto/: BUILD.bazel  config.proto  service.proto
