load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/zecke/goulding/cmd/goulding-cli",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/server:go_default_library",
        "//proto:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)

go_binary(
    name = "goulding-cli",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
