load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["config.go"],
    importpath = "github.com/zecke/goulding/pkg/config",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
    ],
)
