load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "judge.go",
        "primitive.go",
    ],
    importpath = "github.com/zecke/goulding/pkg/judges",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
